css fixes | DevTabs-info-section centered on small and moved over med | qr- shifted grid to respond better and center on mobile | tracking - added margin on mobile

--- a/src/components/CtaBlock/CtaBlock.css
+++ b/src/components/CtaBlock/CtaBlock.css
@@ -26,3 +26,9 @@
 .block-text {
   opacity: 0.7;
 }
+
+@media screen and (max-width: 660px) {
+  .line-icons {
+    margin-left: -80px;
+  }
+}
